# dv-api

./: CHANGELOG.md  Cargo.toml  README.md
autox/: Cargo.toml
autox/src/: lib.rs  linux.rs  windows.rs
autox/src/windows/: system.rs  user.rs
dv-api/: Cargo.toml
dv-api/src/: core.rs  error.rs  fs.rs  lib.rs  multi.rs  process.rs  user.rs  util.rs
dv-api/src/multi/: local.rs  ssh.rs
dv-api/src/multi/local/: config.rs  file.rs
dv-api/src/multi/ssh/: config.rs  file.rs
dv-api/src/user/: config.rs
dv-api/src/util/: command.rs  pm.rs
dv-api/src/util/command/: linux.rs  mock.rs
dv-api/src/util/command/linux/: alpine.rs  debian.rs  manjaro.rs  support.rs
dv-api/src/util/command/linux/support/: openrc.rs  systemd.rs
dv-api/src/util/pm/: platform.rs  support.rs
dv-api/src/util/pm/linux/support/: apk.rs
dv-api/src/util/pm/platform/: alpine.rs  debian.rs  manjaro.rs  windows.rs
dv-api/src/util/pm/support/: apk.rs  apt.rs  winget.rs  yay.rs
dv-api/src/util/pm/support/sh/: apt_query.sh  pacman_query.sh  winget_query.ps1
dv-wrap/: Cargo.toml
dv-wrap/src/: cache.rs  context.rs  db.rs  device.rs  dv.rs  interactor.rs  lib.rs  ops.rs  user.rs  utils.rs
dv-wrap/src/cache/: sqlite.rs
dv-wrap/src/db/: sqlite.rs
dv-wrap/src/ops/: auto.rs  copy.rs  dl.rs  dotutils.rs  exec.rs  fs.rs  once.rs  pm.rs  refresh.rs  sync.rs
dv-wrap/src/ops/dotutils/: schema.rs  source.rs
dv-wrap/src/ops/dotutils/source/: fs.rs
dv-wrap/src/ops/pm/: platform.rs
dv-wrap/src/ops/pm/linux/: manjaro.rs
dv-wrap/src/ops/pm/platform/: alpine.rs  arch.rs  manjaro.rs  ubuntu.rs  windows.rs
dv-wrap/src/ops/pm/support/: apk.rs  apt.rs  pacman.rs  paru.rs  winget.rs  yay.rs
dv-wrap/src/ops/pm/support/sh/: apk_query.sh  winget_install.ps1
dv-wrap/src/utils/: oneshot.rs
e4pty/: Cargo.toml
e4pty/src/: core.rs  error.rs  instance.rs  lib.rs
e4pty/src/instance/: local.rs
e4pty/src/instance/local/: linux.rs  windows.rs
os2/: Cargo.toml  README.md
os2/src/: lib.rs  linux.rs
utf8path2/: Cargo.toml
utf8path2/src/: lib.rs
