[workspace]
members = ["autox", "dv-api", "dv-wrap", "e4pty", "os2", "utf8path2"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["km0e <kmdr.error@gmail.com>"]
repository = "https://github.com/km0e/dev-vault.git"

[workspace.dependencies]
tokio = { version = "1.47", features = ["fs", "io-std", "rt-multi-thread"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = { version = "0.1" }
home = { version = "0.5" }
tempfile = "3.20"
