[workspace]
members = ["autox", "dv-api", "dv-wrap", "e4pty", "os2"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["km0e <kmdr.error@gmail.com>"]
repository = "https://github.com/km0e/dv-api.git"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
tempfile = "3.22"
thiserror = "2.0"
tracing = { version = "0.1" }
tokio = { version = "1.47", features = ["fs", "rt-multi-thread"] }
