[package]
name = "dv-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bitflags = "2.9"
e4pty = { version = "0.1" }
fastrand = "2.3"
home.workspace = true
os2 = { version = "0.1" }
russh = { version = "0.54", default-features = false, features = [
    "flate2",
    "ring",
    "pty",
], git = "https://github.com/km0e/russh.git", branch = "pty" }
russh-config = { version = "0.54", git = "https://github.com/km0e/russh.git", branch = "pty" }
russh-sftp = "2.1"
rustix = { version = "1.0", features = ["pty"] }
strum = { version = "0.27", features = ["derive"] }
tempfile = "3.20"
thiserror = "2.0"
tokio.workspace = true
tracing.workspace = true
utf8path2 = { version = "0.1" }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_System_SystemServices",
    "Win32_Security",
] }

[target.'cfg(not(windows))'.dependencies]
rustix-openpty = "0.2"

[features]
default = []
full = ["default"]
