[package]
name = "dv-api"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bitflags = { version = "2.9" }
e4pty = { version = "0.1" }
fastrand = "2.3"
os2 = { version = "0.1" }
russh = { version = "0.54", default-features = false, features = [
    "flate2",
    "ring",
    "pty",
], git = "https://github.com/km0e/russh.git", branch = "pty" }
russh-config = { version = "0.54", git = "https://github.com/km0e/russh.git", branch = "pty" }
russh-sftp = "2.1"
rustix = { version = "1.0", features = ["pty"] }
strum = { version = "0.27", features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
camino = { version = "1.1" }
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_SystemServices",
    "Win32_Security",
] }

[target.'cfg(not(windows))'.dependencies]
rustix-openpty = "0.2"

[features]
default = []
full = ["default"]
