[package]
name = "dv-wrap"
version = "0.1.0"
description = "a set of basic tools for controlling device with dv-api"
homepage = "https://blog.101248.xyz/zh/dv4rune"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "F5B8D690-7A05-4CDA-8FAC-AE3912689AFC"
path-guid = "ED96C019-3206-4F56-8EA2-22C3F671E851"
license = false
eula = false

[dependencies]
dv-api = { path = "../dv-api", features = ["full"] }
os2 = { path = "../os2", features = ["serde"] }

home.workspace = true
tokio.workspace = true
tracing.workspace = true
resplus.workspace = true
async-trait.workspace = true

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-fd = "0.3"
rustix = { version = "1.0", features = ["pty", "fs"] }
thiserror = "2.0"
rusqlite = { version = "0.37", features = ["bundled"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tempfile = "3.20"
strum = { version = "0.27", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
] }

[dev-dependencies]
assert_fs = "1.1"

[features]
default = []
rune = ["os2/rune"]
