[package]
name = "dv-wrap"
version = "0.1.4"
description = "a set of basic tools for controlling device with dv-api"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.wix]
upgrade-guid = "F5B8D690-7A05-4CDA-8FAC-AE3912689AFC"
path-guid = "ED96C019-3206-4F56-8EA2-22C3F671E851"
license = false
eula = false

[dependencies]
anyhow = "1.0"
async-trait.workspace = true
base64 = "0.22"
bitflags = { version = "2.11" }
crossterm = { version = "0.29", features = [] }
dv-api = { path = "../dv-api", features = ["full"] }
os2 = { version = "0.1", features = ["serde"] }
reqwest = { version = "0.13" }
rusqlite = { version = "0.39", features = ["bundled"] }
rustix = { version = "1.1", features = ["pty", "fs"] }
serde.workspace = true
strum = { workspace = true, features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "1.1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
] }

[dev-dependencies]
assert_fs = "1.1"

[features]
default = []
rune = ["os2/rune"]
full = ["default"]
fast = []
