[package]
name = "e4pty"
version = "0.1.9"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "abstract api for pty"
license = "MIT"

[dependencies]
async-trait.workspace = true
strum.workspace = true
tempfile.workspace = true
serde = { workspace = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(not(windows))'.dependencies]
rustix-openpty = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
rustix = { version = "1.0", features = ["process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
] }
