[package]
name = "utf8path2"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "utf8path2 - a library for working with UTF-8 paths in Rust"
license = "MIT"


[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
